Significant update to handling other taxon ranks
Data for non-configured ranks now imported, with options for filtering.
